--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">To Do List</string>
-    <string name="ending_tasks">Ending tasks</string>
+    <string name="ending_tasks">Tasks near due date</string>
     <string name="to_do_tasks">To do</string>
     <string name="done_tasks">Done</string>
     <string name="add_task_activity">Add task</string>
@@ -14,4 +14,7 @@
     <string name="menu_edit">Edit</string>
     <string name="menu_delete">Delete</string>
     <string name="no_tasks_message">No tasks here yet…</string>
+    <string name="message_task_marked_as_done">Task %s was marked as done </string>
+    <string name="message_task_unmarked_as_done">Task %s was unmarked as done</string>
+    <string name="message_task_deleted">Task %s deleted</string>
 </resources>
